--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+    compile 'com.github.khacpv:Calendar-Day-View:master-SNAPSHOT'
+    compile 'com.github.alamkanak:android-week-view:1.2.6'
+    compile 'com.android.support:design:25.3.1'
+    compile 'joda-time:joda-time:2.9.4'
 }
