change settings view completely, uses activity and preference fragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
+        <activity android:name=".settings.SettingsActivity" android:label="Settings" android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".timeline.EventDetails"
             android:label="@string/title_event_details"
