--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,13 +19,19 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".settings.SettingsActivity" android:label="Settings" android:parentActivityName=".MainActivity"/>
         <activity
-            android:name=".timeline.EventDetails"
+            android:name=".timeline.EventDetailsActivity"
             android:label="@string/title_event_details"
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".ranking.RankDetails"
             android:label="@string/title_rank_details"
             android:parentActivityName=".MainActivity" />
+        <activity android:name=".settings.ManagedModeActivity" android:label="Managed Mode" android:parentActivityName=".settings.SettingsActivity">
+            <intent-filter>
+                <action android:name=".settings.ExtendedModeActivity" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
