--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     compile 'joda-time:joda-time:2.9.4'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.github.aakira:expandable-layout:1.6.0@aar'
+    compile 'com.afollestad.material-dialogs:core:0.9.4.5'
     testCompile 'junit:junit:4.12'
 }
