change design of new post - social, add live view to tab

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity android:name=".social.SocialActivity" android:label="New Post" android:parentActivityName=".MainActivity"/>
     </application>
 
 </manifest>
